welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()==true) {
    ^